--- a/app/assets/stylesheets/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/partials/utils/_vars.scss
@@ -364,5 +364,7 @@ $box-shadow-heavy: 0 0 7px rgba(#000, 0.3) !default;
 
 $box-shadow-drop-down: 0 1px 3px rgba(#000, 0.5) !default;
 
-/* Drop down menu max height */
+/* Drop down menu */
+$drop-down-width: 285 !default;
+
 $drop-down-max-height: 230px !default;
