--- a/app/assets/stylesheets/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/partials/utils/_vars.scss
@@ -43,6 +43,8 @@ $font-size-micro: $font-size - 5 !default;
 $font-size-lrg: $font-size + 2 !default;
 
 /* Extra large */
+$font-size-xlrg: 24 !default;
+
 $font-size-giga: 96 !default;
 
 $font-size-mega: 72 !default;
