--- a/app/assets/stylesheets/partials/abstractions/_vertical-alignment.scss
+++ b/app/assets/stylesheets/partials/abstractions/_vertical-alignment.scss
@@ -18,4 +18,7 @@
     display: table-cell;
     text-align: center;
     vertical-align: middle;
+
+    /* Extends: Left alignment */
+    .vert-align--left & {text-align: left;}
   }
