--- a/app/assets/stylesheets/partials/helpers/_text.scss
+++ b/app/assets/stylesheets/partials/helpers/_text.scss
@@ -15,6 +15,8 @@
 
 .txt-lrg {@include font-size($font-size-lrg, $sledgehammer: !important);}
 
+.txt-xlrg {@include font-size($font-size-xlrg, $sledgehammer: !important);}
+
 .txt-reset {font-size: 100% !important;}
 
 /* Alignments */
