--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -28,7 +28,8 @@
 
   <ul class="drop-down-menu__list">
     <li ng-repeat="category in search.categories.values | orderBy: 'sort_order'" class="drop-down-menu__divider islet">
-      <input ng-model="category.selected" ng-checked="category.selected" value="{{ category.code }}" id="category_{{ category.code }}" type="checkbox"><label for="category_{{ category.code }}">{{ category.name }}</label>
+      <input ng-model="category.selected" ng-checked="category.selected" value="{{ category.code }}" id="category_{{ category.code }}" type="checkbox"><!--
+      --><label for="category_{{ category.code }}">{{ category.name }}</label>
     </li>
   </ul>
 
@@ -120,7 +121,8 @@
 
                 <ul class="drop-down-menu__list">
                   <li ng-repeat="retailer in search.retailers.values | nameStartsWith: storeSearch | limitTo: 250" class="drop-down-menu__divider islet">
-                    <input ng-model="retailer.selected" ng-checked="retailer.selected" value="{{ retailer.code }}" id="retailer_{{ retailer.code }}" type="checkbox"><label for="retailer_{{ retailer.code }}" class="txt-truncate">{{ retailer.name }}</label>
+                    <input ng-model="retailer.selected" ng-checked="retailer.selected" value="{{ retailer.code }}" id="retailer_{{ retailer.code }}" type="checkbox"><!--
+                    --><label for="retailer_{{ retailer.code }}" class="txt-truncate">{{ retailer.name }}</label>
                   </li>
                 </ul>
 
@@ -162,7 +164,8 @@
 
                 <ul class="drop-down-menu__list">
                   <li ng-repeat="brand in search.brands.values | nameStartsWith: brandSearch | limitTo: 250" class="drop-down-menu__divider islet">
-                    <input ng-model="brand.selected" ng-checked="brand.selected" value="{{ brand.code }}" id="brand_{{ brand.code }}" type="checkbox"><label for="brand_{{ brand.code }}" class="txt-truncate">{{ brand.name }}</label>
+                    <input ng-model="brand.selected" ng-checked="brand.selected" value="{{ brand.code }}" id="brand_{{ brand.code }}" type="checkbox"><!--
+                    --><label for="brand_{{ brand.code }}" class="txt-truncate">{{ brand.name }}</label>
                   </li>
                 </ul>
 
@@ -199,7 +202,8 @@
 
                 <ul class="drop-down-menu__list">
                   <li ng-repeat="colour in search.colours.values" class="drop-down-menu__divider islet">
-                    <input ng-model="colour.selected" ng-checked="colour.selected" value="{{ colour.code }}" id="colour_{{ colour.code }}" type="checkbox"><label for="colour_{{ colour.code }}">{{ colour.name }}</label>
+                    <input ng-model="colour.selected" ng-checked="colour.selected" value="{{ colour.code }}" id="colour_{{ colour.code }}" type="checkbox"><!--
+                    --><label for="colour_{{ colour.code }}">{{ colour.name }}</label>
                   </li>
                 </ul>
 
@@ -237,7 +241,8 @@
 
                 <ul class="drop-down-menu__list">
                   <li ng-repeat="size in search.sizes.values" class="drop-down-menu__divider islet">
-                    <label for="size_{{ size.code }}">{{ size.name }}</label><input ng-model="size.selected" ng-checked="size.selected" value="{{ size.code }}" id="size_{{ size.code }}" type="checkbox">
+                    <label for="size_{{ size.code }}">{{ size.name }}</label><!--
+                    --><input ng-model="size.selected" ng-checked="size.selected" value="{{ size.code }}" id="size_{{ size.code }}" type="checkbox">
                   </li>
                 </ul>
 
@@ -292,13 +297,15 @@
 
               <%# Narrow view toggle %>
               <div class="filters__trigger filters__trigger--narrow islet">
-                <input ng-model="on_sale" ng-checked="search.params.on_sale" ng-change="filterSearch('on_sale')" id="sale-items" type="checkbox"><label for="sale-items">On sale</label>
+                <input ng-model="on_sale" ng-checked="search.params.on_sale" ng-change="filterSearch('on_sale')" id="sale-items" type="checkbox"><!--
+                --><label for="sale-items">On sale</label>
               </div>
               <%# //Narrow view toggle %>
 
               <%# Wide view toggle %>
               <label for="sale-items-2" class="filters__trigger filters__trigger--wide btn btn--main btn--main-alt4 btn--checkbox-toggle">
-                <input ng-model="on_sale" ng-checked="search.params.on_sale" ng-change="filterSearch('on_sale')" id="sale-items-2" type="checkbox" class="btn--checkbox-toggle__input"><span class="btn--checkbox-toggle__lbl">On sale</span>
+                <input ng-model="on_sale" ng-checked="search.params.on_sale" ng-change="filterSearch('on_sale')" id="sale-items-2" type="checkbox" class="btn--checkbox-toggle__input"><!--
+                --><span class="btn--checkbox-toggle__lbl">On sale</span>
               </label>
               <%# //Wide view toggle %>
 
