--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -7,11 +7,10 @@
   <%# Contain 'filters', 'map/list toggle', and 'listings' %>
   <%# [BACKEND] append `is-filter-applied` class to this container when a category filter has been applied %>
   <div class="js-pjax-container-stores">
-    <%# FIXME: [BACKEND] inject this preloader whilst waiting for show page to load via PJAX %>
-    <%#<span class="preloader preloader--middle preloader--light js-disabled-hide">
+    <span class="preloader preloader--middle preloader--light js-disabled-hide">
       <span class="preloader__spinner"></span>
       <em class="hide-visually">Loading, please wait&#8230;</em>
-    </span>%>
+    </span>
 
     <div class="stores-maps__inner stores-maps__inner--listing">
 
