--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -4,11 +4,10 @@
 
   <%# Contain 'back to listing link' and 'store details' %>
   <div class="js-pjax-container-stores">
-    <%# FIXME: [BACKEND] inject this preloader whilst waiting for index page to load via PJAX %>
-    <%#<span class="preloader preloader--middle preloader--light js-disabled-hide">
+    <span class="preloader preloader--middle preloader--light js-disabled-hide">
       <span class="preloader__spinner"></span>
       <em class="hide-visually">Loading, please wait&#8230;</em>
-    </span>%>
+    </span>
 
     <div class="stores-maps__inner stores-maps__inner--detail" id="stores-maps-toggle-listing-detail">
 
